hphp/test/quick/debug_backtrace_trait.php.expectf
array(3) {
  [0]=>
  array(4) {
    ["file"]=>
    string(%d) "%Sdebug_backtrace_trait_helper.inc"
    ["line"]=>
    int(15)
    ["function"]=>
    string(15) "print_backtrace"
    ["args"]=>
    array(0) {
    }
  }
  [1]=>
  array(7) {
    ["file"]=>
    string(%d) "%Sdebug_backtrace_trait.php"
    ["line"]=>
    int(6)
    ["function"]=>
    string(3) "bar"
    ["class"]=>
    string(1) "C"
    ["object"]=>
    object(C) (0) {
    }
    ["type"]=>
    string(2) "->"
    ["args"]=>
    array(1) {
      [0]=>
      object(stdClass) (0) {
      }
    }
  }
  [2]=>
  array(2) {
    ["function"]=>
    string(32) "entrypoint_debug_backtrace_trait"
    ["args"]=>
    array(0) {
    }
  }
}

Catchable fatal error: Argument 1 passed to C::bar() must be an instance of stdClass, int given in %Sdebug_backtrace_trait.php on line 7
